:sparkles: feat: add park entities structure, dynamic resort pages and basic styling

--- a/components/layout/Navigation/Nav.module.css
+++ b/components/layout/Navigation/Nav.module.css
@@ -1,8 +1,6 @@
 .main-navigation {
   background: rebeccapurple;
   width: 100%;
-  display: flex;
-  justify-content: space-between;
   padding: 30px;
 }
 
@@ -26,3 +24,10 @@
   text-decoration: underline;
 }
 
+.container {
+  max-width: 960px;
+  width: 100%;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+}
