--- a/styles/global.css
+++ b/styles/global.css
@@ -78,3 +78,20 @@ html, body {
   font-family: 'Open Sans', sans-serif;
   font-weight: 400;
 }
+
+.park-list {
+  display: flex;
+  list-style: none;
+  width: 100%;
+  justify-content: space-around;
+}
+
+.park-list li {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  border: 3px solid rebeccapurple;
+  padding: 30px;
+}
