--- a/styles/global.css
+++ b/styles/global.css
@@ -111,3 +111,21 @@ html, body {
   border: 3px solid rebeccapurple;
   padding: 30px;
 }
+
+h2 {
+  margin-bottom: 30px;
+}
+
+.trip-form {
+  display: flex;
+  flex-direction: column;
+}
+
+.trip-form label {
+  margin-bottom: 5px;
+}
+
+.trip-form input {
+  width: 75%;
+  margin-bottom: 20px;
+}
